fix gap between cards

--- a/src/app/shared/components/organization-card/organization-card.component.scss
+++ b/src/app/shared/components/organization-card/organization-card.component.scss
@@ -1,5 +1,6 @@
 .card {
-  width: 285px;
+  // min-width: 274px;
+  min-width: 285px;
   // width: 300px;
   // height: 440px;
   background: #FFFFFF;
